# librarysite

./: .dockerignore  .env.example  .gitignore  Dockerfile  Pipfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
librarysite/: .fuse_hidden000000ef00000004  .fuse_hidden000000f100000005  db.sqlite3  test.py
librarysite/books/: admin.py  models.py  scrape.py  serializers.py  services.py  views.py
librarysite/books/migrations/: 0001_initial.py  0002_alter_book_availability_alter_book_id_and_more.py  0002_book_created_at_book_updated_at.py  0002_category.py  0003_alter_book_availability_alter_book_reviews_and_more.py  0003_alter_book_title.py  0003_books_ganre.py  0004_alter_books_ganre.py  0004_rename_date_book_writed_at_book_author.py  0005_alter_books_ganre.py  0006_rename_ganre_books_ganres.py  0007_apikey_books_date_alter_books_ganres.py  0008_alter_books_date.py
librarysite/common/: PasswordResetRequired.py  models.py  permissions.py
librarysite/librarysite/: .env.example  asgi.py  settings.py  urls.py  wsgi.py
librarysite/user/: .env.example  models.py  serializers.py  services.py  views.py
librarysite/user/migrations/: 0001_initial.py  0002_user_admin.py  0003_alter_user_email_alter_user_password_and_more.py  0004_alter_user_password.py  0005_rename_admin_user_is_admin.py  0006_user_created_at_user_updated_at.py  0007_user_password_need_reset.py
